完善了token验证的方法; 添加了jwt的secret和token的有效时长的配置; 基本完成了与player相关的接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-server.port=8080
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/chessGame?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=UTC
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+server:
+  port: 8818
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+
+bussiness:
+  jwtSecret: "liu_yi_cheng"
+  //有效时间 毫秒
+  validTime: 10 * 60 *1000
