--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,11 @@ repositories {
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'mysql:mysql-connector-java'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
     implementation 'com.auth0:java-jwt:3.11.0'
+    implementation 'cn.hutool:hutool-all:5.5.4'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
