--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'mysql:mysql-connector-java'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.4.1'
     implementation 'com.auth0:java-jwt:3.11.0'
     implementation 'cn.hutool:hutool-all:5.5.4'
 
