--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket:2.4.1'
     implementation 'com.auth0:java-jwt:3.11.0'
     implementation 'cn.hutool:hutool-all:5.5.4'
+    implementation 'org.apache.httpcomponents:httpclient'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
